--- a/aws/deploy_cdk/action.yml
+++ b/aws/deploy_cdk/action.yml
@@ -31,7 +31,7 @@ runs:
       uses: actions/setup-node@v4
       with:
         node-version: 20
-        cache: "npm"
+        # cache: "npm"
 
     # - name: Cache npm directory
     #   uses: actions/cache@v3
