Add quiet flag to pip install command

--- a/aws/generate-lambda-layer/action.yml
+++ b/aws/generate-lambda-layer/action.yml
@@ -42,6 +42,7 @@ runs:
       run: |
         mkdir python
         pip install -r requirements.txt \
+          --quiet \
           --no-cache-dir \
           -t python/python \
           --upgrade
