--- a/aws/generate-lambda-layer/action.yml
+++ b/aws/generate-lambda-layer/action.yml
@@ -35,7 +35,7 @@ runs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pipenv
-        python -m pipenv sync --clear
+        python -m pipenv install
         python -m pipenv run pip freeze > requirements.txt
 
     - name: Install dependencies
