インストールしたライブラリ一覧を出力

--- a/aws/generate-lambda-layer/action.yml
+++ b/aws/generate-lambda-layer/action.yml
@@ -46,6 +46,7 @@ runs:
           --no-cache-dir \
           -t python/python \
           --upgrade
+        pip freeze
       shell: bash
 
     - name: Zip dependencies
